[gd_scene load_steps=12 format=3 uid="uid://dcc24f4t7ky6a"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_0mo2x"]
[ext_resource type="PackedScene" uid="uid://7cb54beaag5l" path="res://Scenes/test_environment.tscn" id="1_wgwvp"]
[ext_resource type="FontFile" uid="uid://d1p4unxf4ru6" path="res://Fonts/Bulletproof-w1nxx.ttf" id="3_8tsc4"]
[ext_resource type="Texture2D" uid="uid://ciufgjl7xs1qw" path="res://Materials/Textures/checkbox_checked.png" id="3_rhs5o"]
[ext_resource type="Texture2D" uid="uid://b0ki5nbsifx5i" path="res://Materials/Textures/checkbox_unchecked.png" id="4_5elpy"]
[ext_resource type="FontFile" uid="uid://vpsfol54gbcp" path="res://Fonts/KodeMono-Regular.ttf" id="4_bggtv"]
[ext_resource type="LabelSettings" uid="uid://btrlypejjt8s1" path="res://Fonts/annotation.tres" id="7_fy4jv"]

[sub_resource type="Environment" id="Environment_wc8hj"]
ambient_light_source = 2
ambient_light_color = Color(0.140447, 0.140447, 0.140447, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hoxln"]
bg_color = Color(0, 0, 0, 0.235294)

[sub_resource type="LabelSettings" id="LabelSettings_mngbk"]
line_spacing = 5.0
font = ExtResource("3_8tsc4")
font_size = 120
font_color = Color(1, 0.703333, 0.11, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nexl2"]
line_spacing = 5.0
font = ExtResource("3_8tsc4")
font_size = 120
font_color = Color(0.760784, 0.403922, 0, 1)

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_0mo2x")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wc8hj")

[node name="TestEnvironment" parent="." instance=ExtResource("1_wgwvp")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.641045, 0.123476, 0.757506, -7.84797e-09, 0.986974, -0.16088, -0.767503, 0.103131, 0.632695, -0.220391, -3.11987, 13.6887)
current = true

[node name="MenuBG" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MenuBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hoxln")

[node name="Title" type="Label" parent="MenuBG"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 169.0
grow_horizontal = 2
text = "SURPRISE"
label_settings = SubResource("LabelSettings_mngbk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title2" type="Label" parent="MenuBG"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 89.0
offset_bottom = 319.0
grow_horizontal = 2
text = "INSPECTION"
label_settings = SubResource("LabelSettings_nexl2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGame" type="Button" parent="MenuBG"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 161.0
offset_top = -329.0
offset_right = 378.0
offset_bottom = -258.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.760784, 0.403922, 0, 1)
theme_override_fonts/font = ExtResource("4_bggtv")
theme_override_font_sizes/font_size = 32
text = "Start Game"

[node name="SkipIntroButton" type="CheckBox" parent="MenuBG/StartGame"]
layout_mode = 0
offset_left = 7.0
offset_top = 80.0
offset_right = 79.0
offset_bottom = 152.0
scale = Vector2(0.30295, 0.30295)
theme_override_icons/checked = ExtResource("3_rhs5o")
theme_override_icons/unchecked = ExtResource("4_5elpy")
expand_icon = true

[node name="SkipIntroText" type="Label" parent="MenuBG/StartGame"]
layout_mode = 0
offset_left = 37.0
offset_top = 80.0
offset_right = 93.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 12
text = "Skip Intro"
label_settings = ExtResource("7_fy4jv")
vertical_alignment = 1

[node name="Options" type="Button" parent="MenuBG"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 161.0
offset_top = -218.0
offset_right = 274.0
offset_bottom = -183.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.760784, 0.403922, 0, 1)
theme_override_fonts/font = ExtResource("4_bggtv")
theme_override_font_sizes/font_size = 16
text = "Options"

[node name="Quit" type="Button" parent="MenuBG"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 161.0
offset_top = -173.0
offset_right = 272.0
offset_bottom = -136.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.760784, 0.403922, 0, 1)
theme_override_fonts/font = ExtResource("4_bggtv")
theme_override_font_sizes/font_size = 16
text = "Quit"

[connection signal="pressed" from="MenuBG/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MenuBG/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MenuBG/Quit" to="." method="_on_quit_pressed"]
